SCMOD-12730: Renaming
