# job-service-contract/src/main/resources/com/hpe/caf/services/job/swagger.yaml
@@ -230,14 +230,13 @@ paths:
     get:
       tags:
         - Jobs
-      summary: Gets the status of the job.
+      summary: Gets the status of the job
       description: Gets the status of the specified job.
       operationId: getJobStatus
       responses:
         200:
-          description: Returns the status of the job.
           schema:
-            $ref: "#/definitions/job-status"
+            $ref: "#/definitions/job-status-response"
           headers:
             CacheableJobStatus:
                 description: A response that includes this header with the value ‘true’ is eligible for caching in a cache specific to job status responses.
@@ -466,7 +465,7 @@ definitions:
         format: int64
         description: The time the job status or progress last changed
       status:
-        $ref: "#/definitions/job-status-enum"
+        $ref: "#/definitions/job-status"
       percentageComplete:
         type: number
         format: float
@@ -483,15 +482,15 @@ definitions:
         description: |
           A map of meta data associated with this job. Note that the keys can only include alphanumeric, '_', '-' and
           ':' characters      
-  job-status:
+  job-status-response:
     type: object
     description: Response containing the status of the job.
     required:
       - status
     properties:
       status:
-        $ref: "#/definitions/job-status-enum"
-  job-status-enum:
+        $ref: "#/definitions/job-status"
+  job-status:
     type: string
     description: The status of the job.
     enum:
