# job-service/src/main/java/com/hpe/caf/services/job/api/DatabaseHelper.java
@@ -19,7 +19,7 @@ import com.hpe.caf.services.db.client.DatabaseConnectionProvider;
 import com.hpe.caf.services.job.api.generated.model.Failure;
 import com.hpe.caf.services.job.api.generated.model.Job;
 import com.hpe.caf.services.configuration.AppConfig;
-import com.hpe.caf.services.job.api.generated.model.JobStatus;
+import com.hpe.caf.services.job.api.generated.model.JobStatusResponse;
 import com.hpe.caf.services.job.api.generated.model.SortDirection;
 import com.hpe.caf.services.job.api.generated.model.SortField;
 import com.hpe.caf.services.job.exceptions.BadRequestException;
@@ -422,7 +422,7 @@ public final class DatabaseHelper
         return canBeProgressed;
     }
 
-    public JobStatus getJobStatus(final String partitionId, final String jobId) throws Exception
+    public JobStatusResponse getJobStatus(final String partitionId, final String jobId) throws Exception
     {
         try (
             final Connection conn = DatabaseConnectionProvider.getConnection(appConfig);
@@ -434,9 +434,9 @@ public final class DatabaseHelper
             LOG.debug("Calling get_job() database function...");
             final ResultSet rs = stmt.executeQuery();
             rs.next();
-            final JobStatus jobStatus = new JobStatus();
-            jobStatus.setStatus(Job.StatusEnum.valueOf(rs.getString("status").toUpperCase(Locale.ENGLISH)));
-            return jobStatus;
+            final JobStatusResponse jobStatusResponse = new JobStatusResponse();
+            jobStatusResponse.setStatus(Job.StatusEnum.valueOf(rs.getString("status").toUpperCase(Locale.ENGLISH)));
+            return jobStatusResponse;
         } catch (final SQLException se) {
             // TODO throws 404 if job not found - implications for clients (isJobActive does not return 404, just returns false for non-existing jobs)
             throw mapSqlNoDataException(se);
